test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_parse/plx1_cast_post_sizeof copy.plx
pub fn main(none) i32 {
    return cast<char>(1) sizeof(10)
}
